# brainscape-scraper

./: pyproject.toml  requirements.txt  scraper.py
csv_sem_utf8_delimiter_virgula/: Conditional Mood Flashcards .csv  Conditional Mood Flashcards.csv  Future Tense Flashcards Preview.csv  Future Tense Flashcards.csv  Imperfect Subjunctive Flashcards.csv  Imperfect Tense Flashcards .csv  Key Spanish Verbs Flashcards .csv  Pluperfect Tense Flashcards.csv  Present Perfect Flashcards.csv  Present Subjunctive Flashcards.csv  Present Tense Flashcards .csv  Preterite Tense Flashcards Preview.csv  Preterite Tense Flashcards.csv  Vocab Enrichment 1 Flashcards.csv  Vocab Enrichment 10 Flashcards.csv  Vocab Enrichment 2 Flashcards.csv  Vocab Enrichment 3 Flashcards.csv  Vocab Enrichment 4 Flashcards.csv  Vocab Enrichment 5 Flashcards.csv  Vocab Enrichment 6 Flashcards.csv  Vocab Enrichment 7 Flashcards.csv  Vocab Enrichment 8 Flashcards.csv  Vocab Enrichment 9 Flashcards.csv
