[tool.poetry]
name = "brainscape"
version = "0.1.0"
description = ""
authors = ["thiagodiasv <thiago76ers@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
selenium = "^3.141.0"
xlsxwriter = "^1.2.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
