[tool.poetry]
name = "brainscape"
version = "0.1.0"
description = ""
authors = ["thiagodiasv <thiago76ers@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
selenium = "^3.141.0"
xlsxwriter = "^1.2.7"

[tool.poetry.dev-dependencies]
pylama = "^7.7.1"
black = {version = "^19.10b0", allow-prereleases = true}
ipdb = "^0.12.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
